--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ h4,
   /* POP-UP
 ========================================== */
 
-.pop-up {
+.faq-popup-content {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -329,16 +329,62 @@ h4,
       }
     }
     
-    .close {
+    .close-btn {
       position: absolute;
-      top: 20px;
-      left: 20px;
-      font-size: 1.1rem;
-      letter-spacing: 0.05rem;
-      @include transition(all .4s);
-      
-      &:hover {
-        cursor: pointer;
+      top: 10px;
+      right: 10px;
+      font-size: 30px;
+      background-color: transparent;
+      border: none;
+      color: #333;
+      cursor: pointer;
+    }
+    
+    .close-btn:hover {
+      color: #e74c3c;
+    }
+    
+    .faq-item {
+      margin-bottom: 15px;
+    }
+    
+    .faq-question {
+      display: block;
+      background-color: #f1f1f1;
+      padding: 10px;
+      width: 100%;
+      text-align: left;
+      font-size: 16px;
+      color: #333;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background-color 0.3s;
+    }
+    
+    .faq-question:hover {
+      background-color: #e1e1e1;
+    }
+    
+    .faq-answer {
+      display: none;
+      margin-top: 10px;
+      padding: 10px;
+      background-color: #fafafa;
+      border-radius: 5px;
+      font-size: 14px;
+      color: #555;
+    }
+    
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+    
+      100% {
+        opacity: 1;
+        transform: translateY(0);
       }
     }
     
@@ -442,12 +488,6 @@ h4,
               width: 75%;
               border-right-width: 0px;
             }
-            
-            &:focus {
-              border-color: 
-
-              ;
-            }
           }
           
           &[type=submit] {
@@ -465,7 +505,7 @@ h4,
         }
       }
     }
-  }
+  };
   
   &.open {
     visibility: visible;
@@ -481,66 +521,6 @@ h4,
   }
 }
 }
-
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 30px;
-  background-color: transparent;
-  border: none;
-  color: #333;
-  cursor: pointer;
-}
-
-.close-btn:hover {
-  color: #e74c3c;
-}
-
-.faq-item {
-  margin-bottom: 15px;
-}
-
-.faq-question {
-  display: block;
-  background-color: #f1f1f1;
-  padding: 10px;
-  width: 100%;
-  text-align: left;
-  font-size: 16px;
-  color: #333;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-
-.faq-question:hover {
-  background-color: #e1e1e1;
-}
-
-.faq-answer {
-  display: none;
-  margin-top: 10px;
-  padding: 10px;
-  background-color: #fafafa;
-  border-radius: 5px;
-  font-size: 14px;
-  color: #555;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 
 .whatsapp-float {
   position: fixed;
