--- a/css/style.css
+++ b/css/style.css
@@ -232,20 +232,23 @@ h4,
 }
 
 /* Pop-up FAQ Section */
-.faq-popup {
+/* BUTTON
+========================================== */
+
+.button {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 2;
-
-  .faq-popup {
+  
+  button {
     position: absolute;
     top: 50%;
     left: 50%;
     @include transform(translate(-50%, -50%));
-
+    
     font-family: inherit;
     border: 0;
     padding: 15px 25px;
@@ -259,29 +262,44 @@ h4,
     visibility: visible;
     opacity: 1;
     font-weight: bold;
-    box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.6);
-
+    box-shadow: 0px 6px 30px rgba(0,0,0,0.6);
+    
     &:hover {
       cursor: pointer;
     }
-
+    
     span {
-
+      
       opacity: 1;
     }
   }
-
+  
   &.clicked {
     button {
       visibility: hidden;
-      oacity: 0;
+      opacity: 0;
     }
   }
 }
 
-.faq-popup-content {
-  /* POP-UP
+/* KEYFRAMES
 ========================================== */
+
+@include keyframes(float) .faq-popup-content {
+  0% {
+		transform: translatey(0px);
+    transform: translatex(0px);
+	}
+	50% {
+		transform: translatey(-30px);
+    transform: translatex(20px);
+	}
+	100% {
+		transform: translatey(0px);
+    transform: translatex(0px);
+	}
+}
+
 
 .faq-popup-content {
   position: absolute;
@@ -303,7 +321,7 @@ h4,
     max-width: 900px;
   }
   
-  .content {
+  .faq-popup-content {
     width: 100%;
     max-width: 900px;
     overflow: hidden;
@@ -315,7 +333,7 @@ h4,
       min-height: inherit;
     }
     
-    .container {
+    .faq-popup-content {
       padding: 100px 20px 140px;
       
       @media (min-width: 568px) {
@@ -430,10 +448,9 @@ h4,
     .title {
       h1 {
         text-align: center;
-        color: $orange;
         text-transform: uppercase;
         font-weight: 900;
-        font-size: 2.8rem; //1.4
+        font-size: 2.8rem;
         letter-spacing: 0.05rem;
       }
     }
@@ -460,9 +477,6 @@ h4,
         letter-spacing: 0.07rem;
         margin-bottom: 30px;
         
-        span {
-          color: $orange;
-        }
       }
       
       form {
@@ -480,7 +494,6 @@ h4,
           
           &[type=email] {
             margin-bottom: 15px;
-            border: 1px solid lighten($gray, 50%);
             @include transition(all .4s);
             
             @media (min-width: 768px) {
@@ -491,7 +504,6 @@ h4,
           }
           
           &[type=submit] {
-            border: 1px solid $purple;
             @include transition(all .4s);
             
             @media (min-width: 768px) {
@@ -519,7 +531,6 @@ h4,
       @include transform(translateX(0px));
     }
   }
-}
 }
 
 .whatsapp-float {
