--- a/css/style.css
+++ b/css/style.css
@@ -223,13 +223,35 @@ h4,
   width: 100%;
 }
 
+#popupFormContainer {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  justify-content: center;
+  align-items: center;
+}
+#popupForm {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 600px;
+}
+#closeBtn {
+  float: right;
+  font-size: 20px;
+  cursor: pointer;
+}
+
 /* Floating Help Icon */
 .help-icon {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 45px;
+  right: 45px;
   background-color: #3498db;
-  color: white;
+  color: rgba(78, 6, 6, 0.75);
   padding: 15px;
   border-radius: 50%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
