--- a/css/style.css
+++ b/css/style.css
@@ -192,15 +192,20 @@ h4,
   color: rgba(0, 0, 0, 0.5);
 }
 
-.back-to-top:focus {
-  background: #aa1e21;
+#backToTop {
+  position: fixed;
+  bottom: 90px;
+  right: 20px;
+  background-color: #007BFF;
   color: #fff;
-  outline: none;
-}
-
-.back-to-top:hover {
-  background: #007499;
-  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  font-size: 18px;
+  cursor: pointer;
+  display: none;
+  z-index: 1000;
 }
 
 .story-card {
@@ -245,25 +250,6 @@ h4,
   cursor: pointer;
 }
 
-/* Floating Help Icon */
-.help-icon {
-  position: fixed;
-  bottom: 45px;
-  right: 45px;
-  background-color: #3498db;
-  color: rgba(78, 6, 6, 0.75);
-  padding: 15px;
-  border-radius: 50%;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  font-size: 24px;
-  cursor: pointer;
-  z-index: 1000;
-}
-
-.help-icon:hover {
-  background-color: #2980b9;
-}
-
 /* Pop-up FAQ Section */
 /* BUTTON
 ========================================== */
@@ -276,12 +262,11 @@ h4,
   height: 100%;
   z-index: 2;
   
-  button {
+  .button {
     position: absolute;
     top: 50%;
     left: 50%;
-    @include transform(translate(-50%, -50%));
-    
+    transform: (translate(-50%, -50%));
     font-family: inherit;
     border: 0;
     padding: 15px 25px;
@@ -308,8 +293,7 @@ h4,
   }
   
   &.clicked {
-    button {
-      visibility: hidden;
+    .button {
       opacity: 0;
     }
   }
@@ -340,12 +324,12 @@ h4,
   position: absolute;
   top: 50%;
   left: 50%;
-  @include transform(translate(-50%, -50%) scale(0.9));
+  transform: (translate(-50%, -50%) scale(0.9));
   overflow-y: auto; 
   box-shadow: 0px 6px 30px rgba(0,0,0,0.4);
   visibility: hidden;
   opacity: 0;
-  @include transition(all .3s);
+  transition: (all .3s);
   z-index: 10;
   width: 100%;
   height: 100%;
@@ -496,8 +480,8 @@ h4,
       display: inline-block;
       margin: 30px 0 40px 0;
       opacity: 0;
-      @include transform(translateX(60px));
-      @include transition(.2s);
+      transform: (translateX(60px));
+      transition: (.2s);
       -webkit-backface-visibility: hidden;
       
       @media (min-width: 768px) {
@@ -552,7 +536,7 @@ h4,
         }
       }
     }
-  };
+  }
   
   &.open {
     visibility: visible;
@@ -561,9 +545,9 @@ h4,
     
     img {
       opacity: 1;
-      @include transition(1s);
-      @include transition-delay(.3s);
-      @include transform(translateX(0px));
+      transition: (1s);
+      transition-delay: (.3s);
+      transform: (translateX(0px));
     }
   }
 }
