--- a/css/style.css
+++ b/css/style.css
@@ -208,20 +208,40 @@ h4,
   z-index: 1000;
 }
 
-#chatbot-icon{
+#chatbot-icon {
+  float: left;
+  display: block;
   position: fixed;
-  bottom: 30px;
+  bottom: 20px;
   right: 20px;
-  background-color: #007BFF;
+  background-color: #25D366;
   color: #fff;
-  border: none;
   border-radius: 50%;
-  width: 45px;
-  height: 45px;
-  font-size: 18px;
-  cursor: pointer;
-  display: none;
-  z-index: 1000;
+  padding: 15px;
+  z-index: 100;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+#chatbot-icon .btn{
+  width: 30px;
+  height: 30px;
+}
+
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  color: #fff;
+  border-radius: 50%;
+  padding: 15px;
+  z-index: 100;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.whatsapp-float img {
+  width: 25px;
+  height: 25px;
 }
 
 .story-card {
