--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,8 +335,14 @@ h4,
 }
 
 #formModal {
-  display: none; position: fixed; top: 0; left: 0; width: 100%;
-  height: 100%; background-color: rgba(0,0,0,0.6); z-index: 9999;
+  display: none; 
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%;
+  height: 100%; 
+  background-color: rgba(0,0,0,0.6);
+  z-index: 9999;
 }
 #formModal .modal-content {
   background: white; max-width: 800px; margin: 5% auto; padding: 30px;
@@ -369,7 +375,7 @@ h4,
   right: 20px;
   background-color: #25D366;
   color: #fff;
-  border-radius: 50%;
+  border-radius: 25%;
   padding: 15px;
   z-index: 100;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -466,18 +472,23 @@ h4,
 }
 
 .logo img {
-  height: 120px;
+  display: inline-block;
   max-width: 100%;
-  position: fixed;
-  height: 200px;
+  position: relative;
+  height: 180px;
   left: 4px;
+  transition: left 0.3s ease;
+  z-index: 9999;
+  transform: translateX(0);
+  transition: transform 0.3s ease;
+
 }
 
 @media (max-width: 991.98px) {
   .logo img {
     height: 120px;
     max-width: 100%;
-    position: fixed;
+    position: absolute;
     left: 8px;
   }
 }
@@ -486,7 +497,7 @@ h4,
   .logo img {
     height: 80px;
     max-width: 100%;
-    position: fixed;
+    position: absolute;
     left: 4px;
   }
 
@@ -496,13 +507,15 @@ h4,
   .logo img {
     height: 60px;
     max-width: 100%;
-    position: fixed;
+    position: absolute;
     left: 4px;
   }
 }
 
-.logo img a:hover {
-  zoom: 1;
+.logo img:hover {
+  zoom: 2;
+  transition: zoom 0.3s ease;
+  
 }
 
 .menu-absolute {
