--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,7 +512,7 @@ h4,
   }
 }
 
-.logo img:hover {
+.logo img a:hover {
   zoom: 1;
 }
 
@@ -571,9 +571,15 @@ h4,
 }
 
 .site-nav a {
+  padding: 10px;
   position: relative;
   z-index: 9;
   cursor: pointer;
+  box-sizing: border-box;
+  border-radius: 8px;
+  background-color: #083c5f;
+  color: #ffffff;
+  
 }
 
 .site-nav {
@@ -846,10 +852,10 @@ h4,
 .site-mobile-menu {
   width: 300px;
   position: fixed;
-  right: 0;
+  display: contents;
   z-index: 2000;
   padding-top: 20px;
-  background: #ffffff;
+  background: #00779B;
   height: calc(100vh);
   -webkit-transform: translateX(100%);
   -ms-transform: translateX(100%);
@@ -1090,6 +1096,9 @@ h4,
 }
 
 .sticky-nav {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
