--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -629,7 +629,7 @@ h4,
   box-shadow: #136ad5;
   margin-left: 8px;
   max-width: 100%;
-  height: auto;
+  height: 60%;
   width: auto;
   max-height: 45vw;
   position: relative;
@@ -859,7 +859,6 @@ a:hover {
   background: #fff;
   min-width: 250px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-  display: none;
   flex-direction: column;
   padding: 1rem 0;
   z-index: 1000;
@@ -921,11 +920,8 @@ a:hover {
 
 /* Responsive Design */
 @media (max-width: 992px) {
-  .site-menu {
-    display: none;
-  }
   .burger {
-    display: block;
+    display: inline-block;
   }
 }
 
@@ -992,8 +988,6 @@ a:hover {
   cursor: pointer;
   font-size: 1.5rem;
 }
-
-
 
 .burger {
   width: 30px;
