--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ h4,
 
 /* Modal Content Box */
 .modal-content {
-  background: #ffffff;
+  background: #04324d9a;
   margin: auto;
   padding: 30px 40px;
   border: 1px solid #ddd;
