--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -446,7 +446,7 @@ h4,
 
 /* Modal content */
 .faq-content {
-  background-color: #fff;
+  background-color: #082f4694;
   margin: 5% auto;
   padding: 20px 30px;
   border-radius: 10px;
@@ -458,6 +458,8 @@ h4,
   margin-bottom: 20px;
   color: #0056b3;
 }
+
+
 
 .close-btn {
   color: #aaa;
@@ -522,7 +524,7 @@ h4,
   right: 20px;
   background-color: #25D366;
   color: #fff;
-  border-radius: 25%;
+  border-radius: 50%;
   padding: 15px;
   z-index: 100;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -754,13 +756,13 @@ h4,
   left: 8px;
   object-position: left;
   box-sizing: border-box;
-  border-radius: 8px;
+  border-radius: 4px;
   box-shadow: #136ad5;
   margin-left: 8px;
   max-width: 100%;
-  height: 200vh;
+  height: 400vh;
   width: auto;
-  max-height: 65vw;
+  max-height: 145vw;
   position: relative;
   transition: all 0.3s ease;
   z-index: 9999;
@@ -770,7 +772,7 @@ h4,
   .logo img {
     top: 4px;
     margin-top: 4px;
-    max-height: 65vw;
+    max-height: 125vw;
     position: absolute;
     left: 8px;
     margin-left: 8px;
@@ -781,7 +783,7 @@ h4,
   .logo img {
     top: 4px;
     margin-top: 4px;
-    max-height: 49vw;
+    max-height: 90vw;
     left: 4px;
     margin-left: 8px;
   } 
@@ -791,7 +793,7 @@ h4,
   .logo img {
     top: 4px;
     margin-top: 4px;
-    max-height: 25vw;
+    max-height: 75vw;
     left: 4px;
   }
 }
