--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,6 +744,14 @@ h4,
   }
 }
 
+.top-bar{
+  background-color: #F6821C;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+}
 
 .top-bar a {
   color: #F6821C;
