--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Inter", sans-serif;
-  line-height: 1.6;
+  line-height: 1.7;
   background-color: #F6821C;
   overflow-x: hidden;
   font-size: 16px;
+  font-weight: 100;
   color: #666;
 }
 
@@ -1111,16 +1118,16 @@ a:hover {
 
 /* Navigation */
 .site-nav {
-  background: #140263c9;
   border-bottom: 1px solid #eee;
   position: sticky;
   top: 0;
-  z-index: 999;
 }
 
-.site-navigation {
+.site-nav {
+  background: rgba(255, 255, 255, 0.95);
+  transition: background 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
   display: flex;
-  align-items: center;
   justify-content: space-between;
   padding: 1rem 0;
 }
@@ -1132,11 +1139,15 @@ a:hover {
 }
 
 .site-menu li {
+  padding: 1rem 0;
   position: relative;
   text-align: right;
 }
 
 .site-menu li a {
+  text-decoration: none;
+  font-size: 1rem;
+  transition: color var(--transition-speed) ease;
   font-weight: 600;
   font-family: var(--heading-font);
   color: var(--text-color);
@@ -1200,8 +1211,8 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4); /* dark overlay */
-  z-index: 1;
+  background: rgba(0, 0, 0, 0.4); 
+  /* dark overlay */
 }
 
 .hero-slide > .container {
