--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1178,7 +1178,7 @@ a:hover {
 .site-mobile-menu {
   width: 300px;
   position: fixed;
-  right: 0;
+  left: 0;
   z-index: 2000;
   padding-top: 20px;
   background: #03545f;
@@ -1244,13 +1244,14 @@ a:hover {
 }
 
 .site-mobile-menu .site-nav a {
-  text-decoration: none;
-  font-weight: 600;
-  font-family: var(--heading-font);
-  color: #000000;
   text-transform: capitalize;
-  padding: 10px 0;
+  right: 0;
+  box-sizing: border-box;
+  border-radius: 30px;
+  padding: 10px 20px;
   font-size: 14px;
+  font-weight: 800;
+  text-decoration: none;
   list-style: none;
   display: block;
   position: relative;
